After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748019 - gsocketconnection: Fix copy-pasto in documentation
gsocketconnection: Fix copy-pasto in documentation
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-04-17 04:33 UTC by Arun Raghavan
Modified: 2015-04-20 13:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gsocketconnection: Fix copy-pasto in documentation (828 bytes, patch)
2015-04-17 04:33 UTC, Arun Raghavan
committed Details | Review

Description Arun Raghavan 2015-04-17 04:33:14 UTC
Created attachment 301773 [details] [review]
gsocketconnection: Fix copy-pasto in documentation

Trivial patch attached
Comment 1 Dan Winship 2015-04-20 13:42:05 UTC
Attachment 301773 [details] pushed as 812ce28 - gsocketconnection: Fix copy-pasto in documentation