gsocketconnection: Fix copy-pasto in documentation

https://bugzilla.gnome.org/show_bug.cgi?id=748019